--- a/portfolio/.gitignore
+++ b/portfolio/.gitignore
@@ -21,3 +21,18 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# npm
+node_modules
+# next.js build files
+.next
+out
+# environment variables
+.env.production
+
+# Test coverage
+/coverage
+
+# Cypress
+/e2e/cypress/screenshots
+/e2e/cypress/videos
