--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,7 +1,8 @@
 {
   "name": "portfolio",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "private": true,
+  "license": "UNLICENSED",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -16,6 +17,13 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^4.9.5",
+    "prettier": "^3.3.3"
   },
   "scripts": {
     "dev": "next dev",
