--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "license": "UNLICENSED",
   "dependencies": {
+    "@chakra-ui/react": "^3.20.0",
+    "@emotion/react": "^11.14.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,8 +14,10 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "next": "^15.0.3",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -21,9 +25,9 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.15",
-    "typescript": "^4.9.5",
-    "prettier": "^3.3.3"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "dev": "next dev",
