--- a/portfolio/tsconfig.json
+++ b/portfolio/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "ESNext",
+    "noImplicitAny": false,
     "module": "ESNext",
     "moduleResolution": "node",
     "skipLibCheck": true,
