--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "license": "UNLICENSED",
   "dependencies": {
+    "@chakra-ui/form-control": "^2.2.0",
+    "@chakra-ui/modal": "^2.3.1",
     "@chakra-ui/react": "^3.20.0",
     "@emotion/react": "^11.14.0",
+    "@next/env": "^15.3.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,14 +16,17 @@
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "formik": "^2.4.6",
     "next": "^15.0.3",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
