--- a/.github/workflows/portfolio-website.yml
+++ b/.github/workflows/portfolio-website.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
+          cache-dependency-path: subdir/package-lock.json
           node-version: 16.x
           cache: yarn
       - name: Install node_modules
